<resources>
    <string name="app_name">My Application</string>
    <string name="edutracker">EduTracker</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t Have an Account ?</string>
    <string name="next">Next</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prev">Prev</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="roll_no">Roll No.</string>
</resources>