<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".login">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:backgroundTint="#D4F1F4"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:hint="@string/e_mail"
                android:padding="15dp"
                android:paddingStart="20dp"
                app:boxStrokeColor="#189AB4"
                app:hintTextColor="#05445E"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/password"
                android:padding="15dp"
                android:paddingStart="20dp"
                app:boxStrokeColor="#189AB4"
                app:hintTextColor="#05445E"
                app:passwordToggleEnabled="true"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_border"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#D4F1F4"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="7dp"
                    android:text="@string/register"
                    android:textColor="#00F"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>